results/SVCOMP/conversational/log-ExSymExeD2L-2024_03_12_14_35_17.txt
class Main {

  //@ ensures \result ==> (\forall double x; x >= 0.0 && x <= Long.MAX_VALUE / 2; test(x));
  public static boolean f() {
    double x = Verifier.nondetDouble();
    if (x >= 0.0 && x <= Long.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires x >= 0.0;
  //@ ensures \result ==> res > 0;
  public boolean test(double x) {

    long res = (long) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2L.java:3: error: non-static method test(double) cannot be referenced from a static context
  //@ ensures \result ==> (\forall double x; x >= 0.0 && x <= Long.MAX_VALUE / 2; test(x));
                                                                                  ^
/home/max/Documents/JMLGPT/tmp/ExSymExeD2L.java:5: error: cannot find symbol
    double x = Verifier.nondetDouble();
               ^
  symbol:   variable Verifier
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeD2L.java:14: error: cannot find symbol
  //@ ensures \result ==> res > 0;
                          ^
  symbol:   variable res
  location: class Main
3 errors

class Main {

  //@ ensures \result ==> (\forall double x; x >= 0.0 && x <= Long.MAX_VALUE / 2; new Main().test(x));
  public static boolean f() {
    double x = Math.random();
    if (x >= 0.0 && x <= Long.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires x >= 0.0;
  //@ ensures \result ==> res > 0;
  public boolean test(double x) {

    long res = (long) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2L.java:3: error: Quantifier bodies may not contain constructors: Main()
  //@ ensures \result ==> (\forall double x; x >= 0.0 && x <= Long.MAX_VALUE / 2; new Main().test(x));
                                                                                  ^
/home/max/Documents/JMLGPT/tmp/ExSymExeD2L.java:14: error: cannot find symbol
  //@ ensures \result ==> res > 0;
                          ^
  symbol:   variable res
  location: class Main
2 errors

class Main {

  //@ ensures \result ==> (\forall double x; x >= 0.0 && x <= Long.MAX_VALUE / 2; test(x));
  public static boolean f() {
    double x = Math.random();
    if (x >= 0.0 && x <= Long.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires x >= 0.0;
  //@ ensures \result ==> ((long) (x + 1) > 0);
  public boolean test(double x) {

    long res = (long) (x + 1);
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2L.java:3: error: non-static method test(double) cannot be referenced from a static context
  //@ ensures \result ==> (\forall double x; x >= 0.0 && x <= Long.MAX_VALUE / 2; test(x));
                                                                                  ^
1 error

class Main {

  //@ ensures \result ==> (\forall double x; x >= 0.0 && x <= Long.MAX_VALUE / 2; new Main().test(x));
  public static boolean f() {
    double x = Math.random();
    if (x >= 0.0 && x <= Long.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires x >= 0.0;
  //@ ensures \result ==> ((long) (x + 1) > 0);
  public boolean test(double x) {

    long res = (long) (x + 1);
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2L.java:3: error: Quantifier bodies may not contain constructors: Main()
  //@ ensures \result ==> (\forall double x; x >= 0.0 && x <= Long.MAX_VALUE / 2; new Main().test(x));
                                                                                  ^
1 error

class Main {

  //@ ensures \result ==> (\forall double x; x >= 0.0 && x <= Long.MAX_VALUE / 2; test(x));
  public static boolean f() {
    double x = Math.random();
    if (x >= 0.0 && x <= Long.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires x >= 0.0;
  //@ ensures \result ==> ((long) (x + 1) > 0);
  public boolean test(double x) {

    long res = (long) (x + 1);
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2L.java:3: error: non-static method test(double) cannot be referenced from a static context
  //@ ensures \result ==> (\forall double x; x >= 0.0 && x <= Long.MAX_VALUE / 2; test(x));
                                                                                  ^
1 error

class Main {

  //@ ensures \result ==> (\forall double x; x >= 0.0 && x <= Long.MAX_VALUE / 2; new Main().test(x));
  public static boolean f() {
    double x = Math.random();
    if (x >= 0.0 && x <= Long.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires x >= 0.0;
  //@ ensures \result ==> ((long) (x + 1) > 0);
  public boolean test(double x) {

    long res = (long) (x + 1);
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2L.java:3: error: Quantifier bodies may not contain constructors: Main()
  //@ ensures \result ==> (\forall double x; x >= 0.0 && x <= Long.MAX_VALUE / 2; new Main().test(x));
                                                                                  ^
1 error

class Main {

  //@ ensures \result ==> (\forall double x; x >= 0.0 && x <= Long.MAX_VALUE / 2; test(x));
  public static boolean f() {
    double x = Math.random();
    if (x >= 0.0 && x <= Long.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires x >= 0.0;
  //@ ensures \result ==> ((long) (x + 1) > 0);
  public boolean test(double x) {

    long res = (long) (x + 1);
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2L.java:3: error: non-static method test(double) cannot be referenced from a static context
  //@ ensures \result ==> (\forall double x; x >= 0.0 && x <= Long.MAX_VALUE / 2; test(x));
                                                                                  ^
1 error

class Main {

  //@ ensures \result ==> (\forall double x; x >= 0.0 && x <= Long.MAX_VALUE / 2; new Main().test(x));
  public static boolean f() {
    double x = Math.random();
    if (x >= 0.0 && x <= Long.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires x >= 0.0;
  //@ ensures \result ==> ((long) (x + 1) > 0);
  public boolean test(double x) {

    long res = (long) (x + 1);
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2L.java:3: error: Quantifier bodies may not contain constructors: Main()
  //@ ensures \result ==> (\forall double x; x >= 0.0 && x <= Long.MAX_VALUE / 2; new Main().test(x));
                                                                                  ^
1 error

class Main {

  //@ ensures \result ==> (\forall double x; x >= 0.0 && x <= Long.MAX_VALUE / 2; test(x));
  public static boolean f() {
    double x = Math.random();
    if (x >= 0.0 && x <= Long.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires x >= 0.0;
  //@ ensures \result ==> ((long) (x + 1) > 0);
  public boolean test(double x) {

    long res = (long) (x + 1);
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2L.java:3: error: non-static method test(double) cannot be referenced from a static context
  //@ ensures \result ==> (\forall double x; x >= 0.0 && x <= Long.MAX_VALUE / 2; test(x));
                                                                                  ^
1 error

class Main {

  //@ ensures \result ==> (\forall double x; x >= 0.0 && x <= Long.MAX_VALUE / 2; new Main().test(x));
  public static boolean f() {
    double x = Math.random();
    if (x >= 0.0 && x <= Long.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires x >= 0.0;
  //@ ensures \result ==> ((long) (x + 1) > 0);
  public boolean test(double x) {

    long res = (long) (x + 1);
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2L.java:3: error: Quantifier bodies may not contain constructors: Main()
  //@ ensures \result ==> (\forall double x; x >= 0.0 && x <= Long.MAX_VALUE / 2; new Main().test(x));
                                                                                  ^
1 error

